# deply-dependency-manager

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile.test  devcontainer.json
.github/: copilot-instructions.md
.github/scripts/: build_binary.sh
.github/workflows/: build.yml  docs.yml  on_dispatch.yml  on_pullrequest.yml  on_push.yml  on_release.yml  trivy.yml
docs/: index.md
docs/development/: architecture-and-patterns.md  ci-cd-and-packaging.md  index.md
docs/development/environment/: devcontainer.md  project-configuration.md  uv.md
docs/instructions/getting-started/: getting-started.md
docs/instructions/tasks/: task-1-write-a-npm-plugin.md  task-2-package-and-publish-your-plugin.md  task-2-scan-dependencies.md  task-3-containerize-your-application.md  task-3-package-and-publish-your-plugin.md  task-3-scan-dependencies.md
docs/stylesheets/: extra.css
docs/technical-documentation/architecture/: command-line-interface.md  design-patterns.md
docs/technical-documentation/ci-cd-and-packaging/: github-actions.md  packaging.md
docs/technical-documentation/development/: cli-architecture.md  project-overview.md
docs/technical-documentation/integration_and_deployment/: ci_cd.md  containerization.md  (+1 more)
search/: search_index.json
src/deply/: __init__.py  cli.py
src/depsight/: cli.py
tests/: conftest.py
tests/core/: test_factory.py  test_uv_collect.py  test_vsc_collect.py
tests/fixtures/: pylock_full.toml  uv_lock_full.toml
(+34 files in other folders)
