[project]
name = "deply"
version = "0.1.0"
description = "A modular dependency analysis framework"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "rich-click>=1.7.0",
]

[project.scripts]
deply = "deply.cli:main"

# This is the magic part for plugin support
[project.entry-points."deply.plugins"]
uv = "deply.core.base_plugins.uv.uv:UVPlugin"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"